<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Michael-service</string>
    <string name="fragment_title_garage">Гараж</string>
    <string name="fragment_title_records">Записи</string>
    <string name="fragment_title_statistic">Статистика</string>
    <string name="fragment_title_settings">Настройки</string>
    <string name="fragment_title_about">О нас</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="your_cars">Ваши автомобили</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- activity_splash.xml -->
    <string name="service_book">Электронная сервисная книга</string>

    <!-- activity_login.xml -->
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="bad_login_or_password">Неверный логин или пароль</string>
    <string name="no_internet">Отсутствует интернет соединение</string>
    <string name="not_valid_email">Введите корректный email адрес</string>
    <string name="no_file">Отсутствует отправляемый файл</string>
    <string name="warning">Внимание!</string>
    <string name="upload_success">Файл успешно загружен на сервер!</string>
    <string name="upload_failed">Файл НЕ загружен!!!</string>


    <!-- activity_terms_of_use.xml -->
    <string name="terms_of_use">1. Приложение предоставляется на условиях «как есть» (as is). Правообладатель не предоставляет никаких гарантий в отношении безошибочной и бесперебойной работы Приложения, соответствия Приложения конкретным целям и ожиданиям Пользователя, а также не предоставляет никаких иных гарантий, прямо не указанных в настоящем Соглашении.
\n 2. Информация приведённая в приложении не является действительной без предоставления бумажного оригинала, заверенного необходимыми печатями и подписями организаций.
\n 3. Правообладатель не несет никакой ответственности за какие-либо прямые или косвенные последствия какого-либо использования или невозможности использования Приложения и/или ущерб, причиненный Пользователю и/или третьим сторонам в результате какого-либо использования или неиспользования Приложения, в том числе из-за возможных ошибок или сбоев в работе Приложения.
\n 4. Правообладатель по своему усмотрению может проводить обновления и/или улучшения Приложения.
\n 5. Условия Соглашения подлежат применению до момента прекращения их действия по инициативе Пользователя или по инициативе Правообладателя.
\n 6. Если Пользователь желает прекратить соглашение с Правообладателем, он может сделать это в любое время путем удаления Приложения со смартфона (-ов).
\n 7. Правообладатель оставляет за собой право изменять условия настоящего Соглашения без предварительного уведомления Пользователя. Изменения вступают в силу с момента размещения их в новой версии Приложения.
</string>


    <!-- item_car.xml -->
    <string name="date_of_edition">г.в.,</string>

    <!-- activity_car_details.xml -->
    <string name="car_data">Сведения о транспортном средстве</string>
    <string name="make">Марка</string>
    <string name="model">Модель</string>
    <string name="year">Год выпуска</string>
    <string name="reg_number">Рег. номер</string>
    <string name="vin_code">VIN код</string>
    <string name="color">Цвет</string>
    <string name="reg_data">Сведения о регистрации сервисной книги</string>
    <string name="reg_date">Дата</string>
    <string name="reg_mileage">Пробег</string>

    <!-- fragment_navigation_drawer.xml -->
    <string name="account">Учетная запись</string>

    <!-- fragment_statistic.xml -->
    <string name="current_mileage">Текущий пробег</string>
    <string name="average_mileage">Усредненный пробег</string>
    <string name="per_year">за год</string>
    <string name="per_month">за месяц</string>
    <string name="per_day">за день</string>
    <string name="expenses_description">Расходы на ремонт ТС</string>
    <string name="all">всего</string>
    <string name="expenses_per_100">на 100 км</string>

    <!-- fragment_settings.xml -->
    <string name="logout">Сменить учетную запись</string>
    <string name="terms_of_use_title">Условия использования</string>
    <string name="write_us">Написать нам</string>
    <string name="logout_error">Ошибка авторизации. Попробуйте позже.</string>
    <string name="project_email">servicebookofby@gmail.com</string>
    <string name="email_subject">Отзыв о приложении</string>
    <string name="choose_email_client">Выберите почтовый клиент</string>
    <string name="no_email_clients">Отсутствуют почтовые клиенты</string>
    <!-- Logout AlertDialog -->
    <string name="warning_change_user">Вы действиетельно хотите сменить учетную запись?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="km">км</string>
    <string name="dollar">$</string>
    <string name="rubles">р.</string>
    <string name="works">Выполненные работы:</string>
    <string name="comment">Комментарии</string>
    <string name="total_detail_price">Всего за детали</string>
    <string name="total_work_price">Всего за работу</string>
    <string name="total_price">Итого</string>
    <string name="phone">+375 29 311 33 00 (Velcom)</string>
    <string name="title_activity_car_details">Сведения о ТС</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detail_record">Запись</string>
    <string name="nol">0</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_terms_of_use">Условия использования</string>

</resources>
