<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="by.of.servicebook.myapplication.activities.CarDetailsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/car_data"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp">

                <TableRow>
                    <TextView
                        android:text="@string/make"
                        android:layout_height="32dp"
                        android:gravity="center_vertical"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black54"/>

                    <TextView
                        android:id="@+id/tvMake"
                        android:layout_height="32dp"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:text="@string/make"
                        android:textColor="@color/black54"/>
                </TableRow>

                <TableRow android:layout_height="48dp">
                    <TextView
                        android:text="@string/model"
                        android:layout_height="32dp"
                        android:gravity="center_vertical"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black54"/>

                    <TextView
                        android:id="@+id/tvModel"
                        android:layout_height="32dp"
                        android:gravity="center_vertical"
                        android:text="@string/model"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black54"/>

                </TableRow>

                <TableRow android:layout_height="48dp">
                    <TextView
                        android:text="@string/year"
                        android:layout_height="32dp"
                        android:gravity="center_vertical"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black54"/>

                    <TextView
                        android:id="@+id/tvYear"
                        android:layout_height="32dp"
                        android:gravity="center_vertical"
                        android:text="@string/year"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black54"/>
                </TableRow>

                <TableRow android:layout_height="48dp">
                    <TextView
                        android:text="@string/reg_number"
                        android:layout_height="32dp"
                        android:gravity="center_vertical"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black54"/>

                    <TextView
                        android:id="@+id/tvRegNumber"
                        android:layout_height="32dp"
                        android:gravity="center_vertical"
                        android:text="@string/reg_number"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black54"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/vin_code"
                        android:layout_height="32dp"
                        android:gravity="center_vertical"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black54"/>

                    <TextView
                        android:id="@+id/tvVinCode"
                        android:layout_height="32dp"
                        android:gravity="center_vertical"
                        android:text="@string/vin_code"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black54"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/color"
                        android:layout_height="32dp"
                        android:gravity="center_vertical"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black54"/>

                    <TextView
                        android:id="@+id/tvColor"
                        android:layout_height="32dp"
                        android:gravity="center_vertical"
                        android:text="@string/color"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black54"/>
                </TableRow>

            </TableLayout>

            <TextView
                android:text="@string/reg_data"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp">

                <TableRow>
                    <TextView
                        android:text="@string/reg_date"
                        android:layout_height="32dp"
                        android:gravity="center_vertical"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black54"/>

                    <TextView
                        android:id="@+id/tvRegDate"
                        android:layout_height="32dp"
                        android:gravity="center_vertical"
                        android:text="@string/reg_date"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black54"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/reg_mileage"
                        android:layout_height="32dp"
                        android:gravity="center_vertical"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black54"/>

                    <TextView
                        android:id="@+id/tvRegMileage"
                        android:layout_height="32dp"
                        android:gravity="center_vertical"
                        android:text="@string/reg_mileage"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/black54"/>
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
